force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Used to track issues related to business systems, like Salesforce,</description>
    <label>Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>