force-app/main/default/objects/Issue__c/fields/BRD_Attached__c.field-meta.xml
<CustomField>
    <fullName>BRD_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRD Attached?</label>
    <type>Checkbox</type>
</CustomField>