force-app/main/default/objects/Issue__c/fields/Business_Impact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact_Notes__c</fullName>
    <inlineHelpText>For example,
Shipping Wrong Products
Late / Missed Services
Incorrect / Missed Invoices
Cannot Complete Full Service</inlineHelpText>
    <label>Business Impact Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>