force-app/main/default/objects/Issue__c/fields/Business_Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact_Score__c</fullName>
    <inlineHelpText>Score created from Business Value Driver dropdowns</inlineHelpText>
    <label>Business Impact Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>