force-app/main/default/objects/Issue__c/fields/Business_Impact_Score_Override__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact_Score_Override__c</fullName>
    <inlineHelpText>Enter a value here to override the Business Impact Score. Only specific users have the ability to update this field.</inlineHelpText>
    <label>Business Impact Score Override</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>