force-app/main/default/objects/Issue__c/fields/Change_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Change_Communication_Method__c</fullName>
    <label>Change Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Through Managers</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Document/Article</fullName>
            </value>
            <value>
                <fullName>Web/Video Training</fullName>
            </value>
            <value>
                <fullName>Formal Training</fullName>
            </value>
            <value>
                <fullName>Informal Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>