force-app/main/default/objects/Issue__c/fields/Change_Deploy_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Deploy_Date__c</fullName>
    <label>Change/Deploy Date</label>
    <type>Date</type>
</CustomField>