force-app/main/default/objects/Issue__c/fields/Change_Management_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Owner__c</fullName>
    <label>Change Management Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>