force-app/main/default/objects/Issue__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>IF(ISBLANK(Priority_Score__c) || ISNULL(Priority_Score__c) || Commitment_Score__c = 0.0, &quot;&quot;, 
IF(AND( Commitment_Score__c &gt;= 2.5, Business_Impact_Score__c &lt;= 2.5),&quot;Do Not Touch&quot;, 
IF(AND( Commitment_Score__c &gt;= 2.5, Business_Impact_Score__c &gt;= 2.5),&quot;Strategic Initiative&quot;, 
IF(AND( Commitment_Score__c &lt;= 2.5, Business_Impact_Score__c &gt;= 2.5),&quot;Quick Win&quot;, 
IF(AND( Commitment_Score__c &lt;= 2.5, Business_Impact_Score__c &lt;= 2.5),&quot;Secondary Priority&quot;, &quot;Something&apos;s Wrong&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on both Business Value Score and Commitment Score</inlineHelpText>
    <label>Classification</label>
    <type>Text</type>
</CustomField>