force-app/main/default/objects/Issue__c/fields/Commitment_Score__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Score__c</fullName>
    <inlineHelpText>Score based on Commitment Drivers dropdowns</inlineHelpText>
    <label>Commitment Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>