force-app/main/default/objects/Issue__c/fields/Commitment_Score_Override__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Score_Override__c</fullName>
    <inlineHelpText>Enter a value here to override the Commitment Score. Only specific users have the ability to update this field.</inlineHelpText>
    <label>Commitment Score Override</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>