force-app/main/default/objects/Issue__c/fields/Communicated_By__c.field-meta.xml
<CustomField>
    <fullName>Communicated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communicated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues_As_Comm_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>