force-app/main/default/objects/Issue__c/fields/Cost_One_Time__c.field-meta.xml
<CustomField>
    <fullName>Cost_One_Time__c</fullName>
    <inlineHelpText>One time costs such as services to build</inlineHelpText>
    <label>Cost  (One Time)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - &lt;$5K</fullName>
            </value>
            <value>
                <fullName>2 - $5 - $20K</fullName>
            </value>
            <value>
                <fullName>3 - $20 - $50K</fullName>
            </value>
            <value>
                <fullName>4 - $50 - $100K</fullName>
            </value>
            <value>
                <fullName>5 - &gt;$100K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>