force-app/main/default/objects/Issue__c/fields/Create_Workaround_Cleanup_Issue__c.field-meta.xml
<CustomField>
    <fullName>Create_Workaround_Cleanup_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will create a clone of this Issue appended with &quot;Work Around Cleanup&quot; to track any Issue&apos;s where workarounds were used and a full or complete solution is still required.</inlineHelpText>
    <label>Create Workaround Cleanup Issue?</label>
    <type>Checkbox</type>
</CustomField>