force-app/main/default/objects/Issue__c/fields/CRM_Impact__c.field-meta.xml
<CustomField>
    <fullName>CRM_Impact__c</fullName>
    <inlineHelpText>CRM = Anything impacting sales in the Lead to Quote cycle and anything in between (Leads, Accounts, Contacts, Opportunities, Opportunity Line, Quote, Quote Line, Site Surveys, etc.)</inlineHelpText>
    <label>CRM Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Impact</fullName>
            </value>
            <value>
                <fullName>2 - One of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>3 - Two of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>4 - Three of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>5 - All Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>