force-app/main/default/objects/Issue__c/fields/Current_Org__c.field-meta.xml
<CustomField>
    <fullName>Current_Org__c</fullName>
    <inlineHelpText>Respective Dev Org = the development environment where you built this. That could be the BHDev box or the PwC Dev boxes.</inlineHelpText>
    <label>Current Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respective Dev</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>