force-app/main/default/objects/Issue__c/fields/Customer_Impact_Size__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact_Size__c</fullName>
    <inlineHelpText>Total number of customers impacted by this issue</inlineHelpText>
    <label>No. of Customers Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Less than 10</fullName>
            </value>
            <value>
                <fullName>2 - 11 to 100</fullName>
            </value>
            <value>
                <fullName>3 - 101 to 500</fullName>
            </value>
            <value>
                <fullName>4 - 501 to 1000</fullName>
            </value>
            <value>
                <fullName>5 - Greater than 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>