force-app/main/default/objects/Issue__c/fields/End_User_Impact__c.field-meta.xml
<CustomField>
    <fullName>End_User_Impact__c</fullName>
    <label>End User Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>User Interface Change</fullName>
            </value>
            <value>
                <fullName>Process Change</fullName>
            </value>
            <value>
                <fullName>Security/Permission Change</fullName>
            </value>
            <value>
                <fullName>Functionality Removal</fullName>
            </value>
            <value>
                <fullName>Functionality Addition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>