force-app/main/default/objects/Issue__c/fields/Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Hrs__c</fullName>
    <description>1-8 hours
9-30 Hours
30-50 hours
50-100 hrs
&gt;100</description>
    <label>Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>