force-app/main/default/objects/Issue__c/fields/Example_Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Example_Steps_to_Reproduce__c</fullName>
    <inlineHelpText>To help resolve this issue faster please specify either:
- any relevant examples, like ID&apos;s or numbers or even direct links to affected records (ex. Order or Work Order Numbers)
- steps to reproduce this issue</inlineHelpText>
    <label>Example / Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>