force-app/main/default/objects/Issue__c/fields/External_Party__c.field-meta.xml
<CustomField>
    <fullName>External_Party__c</fullName>
    <label>External Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PwC</fullName>
            </value>
            <value>
                <fullName>Birch Hill</fullName>
            </value>
            <value>
                <fullName>Darcy</fullName>
            </value>
            <value>
                <fullName>BAASS: AccPac Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>