force-app/main/default/objects/Issue__c/fields/External_Party_Person__c.field-meta.xml
<CustomField>
    <fullName>External_Party_Person__c</fullName>
    <label>External Party Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>