force-app/main/default/objects/Issue__c/fields/External_Party_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Party_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Paste a link or enter a reference ID or project name</inlineHelpText>
    <label>External Party Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>