force-app/main/default/objects/Issue__c/fields/FSL_Impact__c.field-meta.xml
<CustomField>
    <fullName>FSL_Impact__c</fullName>
    <description>FSL = Any part of Field Service Lightning. Anything including and after the Order and anything that has to do with technicians, dispatching, scheduling, etc.</description>
    <label>FSL Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Impact</fullName>
            </value>
            <value>
                <fullName>2 - One of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>3 - Two of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>4 - Three of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>5 - All Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>