force-app/main/default/objects/Issue__c/fields/Id_18__c.field-meta.xml
<CustomField>
    <fullName>Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id (18)</label>
    <type>Text</type>
</CustomField>