force-app/main/default/objects/Issue__c/fields/Impact_to_NPS__c.field-meta.xml
<CustomField>
    <fullName>Impact_to_NPS__c</fullName>
    <inlineHelpText>If we asked impacted customers how like they would they be to recommend us, what score would they give us due to this issue. 
*from a scale of 1-10, with 1 being not at all to 10 being extremely likely.</inlineHelpText>
    <label>Impact to NPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 9 or 10</fullName>
            </value>
            <value>
                <fullName>2 - 7 or 8</fullName>
            </value>
            <value>
                <fullName>3 - 5 or 6</fullName>
            </value>
            <value>
                <fullName>4 - 3 or 4</fullName>
            </value>
            <value>
                <fullName>5 - 1 or 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>