force-app/main/default/objects/Issue__c/fields/Impacted_Departments__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Departments__c</fullName>
    <label>Impacted Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>