force-app/main/default/objects/Issue__c/fields/Impacts_Customer__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Customer__c</fullName>
    <inlineHelpText>Is this issue visible to the customer or directly impacts the customer? Please describe in Business Impact</inlineHelpText>
    <label>Impacts Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>