force-app/main/default/objects/Issue__c/fields/Integration_Impact__c.field-meta.xml
<CustomField>
    <fullName>Integration_Impact__c</fullName>
    <inlineHelpText>Anything that has to do with data flowing into Salesforce or out of Salesforce OR into AccPac or out of AccPac</inlineHelpText>
    <label>Integration Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - No Impact</fullName>
            </value>
            <value>
                <fullName>2 - One of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>3 - Two of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>4 - Three of the following Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
            <value>
                <fullName>5 - All Impacted: Data, Configuration, Code and/or End User Change/Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>