force-app/main/default/objects/Issue__c/fields/Is_Parent_Issue__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for grouping child issues, not really an issue that needs resolving itself, or is used to resolve and over arching issue that has many dependancies</inlineHelpText>
    <label>Is Parent Issue</label>
    <type>Checkbox</type>
</CustomField>