force-app/main/default/objects/Issue__c/fields/Is_Work_Around__c.field-meta.xml
<CustomField>
    <fullName>Is_Work_Around__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Work Around?</label>
    <type>Checkbox</type>
</CustomField>