force-app/main/default/objects/Issue__c/fields/Issue_Auto_ID__c.field-meta.xml
<CustomField>
    <fullName>Issue_Auto_ID__c</fullName>
    <displayFormat>IS{000000}</displayFormat>
    <label>Issue Auto ID</label>
    <type>AutoNumber</type>
</CustomField>