force-app/main/default/objects/Issue__c/fields/Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>Issue_ID__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id , IF( ISBLANK(External_ID__c), Issue_Auto_ID__c ,External_ID__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue ID</label>
    <type>Text</type>
</CustomField>