force-app/main/default/objects/Issue__c/fields/Issue_ID_No_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Issue_ID_No_Hyperlink__c</fullName>
    <description>Used in Email Templates only</description>
    <formula>IF( ISBLANK(External_ID__c), Issue_Auto_ID__c ,External_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue ID - No Hyperlink</label>
    <type>Text</type>
</CustomField>