force-app/main/default/objects/Issue__c/fields/Opportunity_Size_Cost_Savings__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Size_Cost_Savings__c</fullName>
    <inlineHelpText>The amount of gain in revenue (Opportunity Size) or the Cost Savings to our organization by implementing this item</inlineHelpText>
    <label>Opportunity Size / Cost Savings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Less than $10K</fullName>
            </value>
            <value>
                <fullName>2 - $11 to $50K</fullName>
            </value>
            <value>
                <fullName>3 - $51K to $100K</fullName>
            </value>
            <value>
                <fullName>4 - $101K to 200K</fullName>
            </value>
            <value>
                <fullName>5 - Greater than $200K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>