force-app/main/default/objects/Issue__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <formula>IF( Business_Impact_Score__c&gt; 0 &amp;&amp; Commitment_Score__c &gt; 0, Business_Impact_Score__c + 6 - Commitment_Score__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ensure all the value fields for IT Commitment and Business Value Driver sections are complete to see a score here</inlineHelpText>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>