force-app/main/default/objects/Issue__c/fields/Production_Accepted_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Production_Accepted_Rejected_Reason__c</fullName>
    <label>Production Accepted/Rejected Reason</label>
    <type>TextArea</type>
</CustomField>