force-app/main/default/objects/Issue__c/fields/Raised_by_Department__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_Department__c</fullName>
    <label>Raised by Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>