force-app/main/default/objects/Issue__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Development (Code)</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Training/Process</fullName>
            </value>
            <value>
                <fullName>Development/Configuration</fullName>
                <isActive>false</isActive>
                <label>Development &amp; Configuration</label>
            </value>
            <value>
                <fullName>Mainly Development (Code)</fullName>
                <isActive>false</isActive>
                <label>Mainly Development (Code)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>