force-app/main/default/objects/Issue__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <inlineHelpText>Root cause of what is causing the data issue.</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Data Entry By User</fullName>
            </value>
            <value>
                <fullName>Data Import</fullName>
            </value>
            <value>
                <fullName>Caused by Salesforce Process</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>