force-app/main/default/objects/Issue__c/fields/Sandbox_Accepted_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Accepted_Rejected_Reason__c</fullName>
    <label>Sandbox Accepted/Rejected Reason</label>
    <type>TextArea</type>
</CustomField>