force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Queue to Investigate Solution</fullName>
            </value>
            <value>
                <fullName>Investigating Solution</fullName>
            </value>
            <value>
                <fullName>In Queue to Implement Resolution</fullName>
            </value>
            <value>
                <fullName>Implementing Resolution</fullName>
            </value>
            <value>
                <fullName>Ready for Testing (Sandbox)</fullName>
            </value>
            <value>
                <fullName>Testing Failed (Sandbox)</fullName>
            </value>
            <value>
                <fullName>Prepare for Deployment</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Ready for Testing (Production)</fullName>
            </value>
            <value>
                <fullName>Testing Failed (Production)</fullName>
            </value>
            <value>
                <fullName>Communicating Change to Users</fullName>
            </value>
            <value>
                <fullName>Blocked: Technical</fullName>
            </value>
            <value>
                <fullName>Blocked: Requires Clarity</fullName>
            </value>
            <value>
                <fullName>Blocked: Requires Approval</fullName>
            </value>
            <value>
                <fullName>Blocked: Requires Impact Score Review</fullName>
            </value>
            <value>
                <fullName>Blocked: Based on Dependencies</fullName>
            </value>
            <value>
                <fullName>Closed: Resolution Complete</fullName>
            </value>
            <value>
                <fullName>Closed: Not Doing</fullName>
            </value>
            <value>
                <fullName>Closed: Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed: Future Enhancement</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Fix in Progress</fullName>
                <isActive>false</isActive>
                <label>Fix in Progress</label>
            </value>
            <value>
                <fullName>On Hold - Low Priority</fullName>
                <isActive>false</isActive>
                <label>On Hold - Low Priority</label>
            </value>
            <value>
                <fullName>On Hold - Using Work Around</fullName>
                <isActive>false</isActive>
                <label>On Hold - Using Work Around</label>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
                <isActive>false</isActive>
                <label>Ready for Testing</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>