force-app/main/default/objects/Issue__c/fields/Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area__c</fullName>
    <label>Strategic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organizational Efficiency</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Customer Demand / Impacting</fullName>
            </value>
            <value>
                <fullName>Regulatory / Risk / Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>