force-app/main/default/objects/Issue__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <inlineHelpText>What does success look like? When this issue is resolved or a solution has been implemented how will we measure or see success? This is less the solution and more the result you would like the solution to have.</inlineHelpText>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>