force-app/main/default/objects/Issue__c/fields/Testing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Testing_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testing Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues_As_Testing_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>