force-app/main/default/objects/Issue__c/fields/Update_Create_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Update_Create_Knowledge_Article__c</fullName>
    <label>Update/Create Knowledge Article</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>