force-app/main/default/objects/Issue__c/recordTypes/Break_Fix.recordType-meta.xml
<RecordType>
    <fullName>Break_Fix</fullName>
    <active>true</active>
    <description>For production data related issue or emergency business impacting issues</description>
    <label>Fix (Urgent)</label>
</RecordType>