force-app/main/default/objects/Issue__c/recordTypes/Data.recordType-meta.xml
<RecordType>
    <fullName>Data</fullName>
    <active>true</active>
    <description>Issues related to Data</description>
    <label>Data</label>
</RecordType>