force-app/main/default/objects/Issue__c/recordTypes/Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Enhancement</fullName>
    <active>true</active>
    <description>Use for suggesting an enhancement or potential project</description>
    <label>Enhancement</label>
</RecordType>