force-app/main/default/objects/Issue__c/recordTypes/Non_Technical.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical</fullName>
    <active>true</active>
    <description>For any issues that don&apos;t require technical effort and are likely process documentation or training related</description>
    <label>Non-Technical</label>
</RecordType>